--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "typescript": "^3.5.3"
   },
   "scripts": {
+    "server": "node server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
+  
   "eslintConfig": {
     "extends": "react-app"
   },
