--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.2.1",
+    "@material-ui/icons": "^4.2.1",
     "node-pre-gyp": "^0.13.0",
     "peer": "^0.2.10",
     "react": "^16.8.6",
