--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "dotenv": "^8.0.0",
-    "node-pre-gyp": "^0.13.0",
+    "firebase": "^6.3.1",
     "peer": "^0.2.10",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-quill": "^1.3.3",
-    "react-scripts": "3.0.1",
-    "typescript": "^3.5.3"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "server": "node server.js",
