--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-quill": "^1.3.3",
-    "react-scripts": "3.0.1"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "server": "node server.js",
