--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-horizontal-scrolling-menu": "^0.7.0",
-    "react-quill": "^1.3.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "typescript": "^3.5.3"
@@ -37,6 +36,11 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "presets": [
+      "es2015-node5"
     ]
   }
 }
