--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@
 
 # production
 /build
-
+# api keys
+.env   
 # misc
 .DS_Store
 .env.local
@@ -23,3 +24,4 @@ yarn-debug.log*
 yarn-error.log*
 node_modules
 node_modules
+
