--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-horizontal-scrolling-menu": "^0.7.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.4",
     "typescript": "^3.5.3"
   },
   "scripts": {
