--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
   },
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.2.1",
-    "@material-ui/icons": "^4.2.1",
-    "firebase": "^6.3.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-horizontal-scrolling-menu": "^0.7.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "typescript": "^3.5.3"
+    "firebase": "^7.0.0",
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1",
+    "react-horizontal-scrolling-menu": "^0.7.3",
+    "react-router-dom": "^5.1.1",
+    "react-scripts": "^3.1.2",
+    "typescript": "^3.6.3"
   },
   "scripts": {
     "server": "node server.js",
